# useful_scripts

./: README.MD  main.py  paths.py  pyproject.toml
docx/: __init__.py  code_to_docx.py
markdown/: obsidian_config_zipper.py  readme_handler.py
pptx/: combine.py
pptx_tools/: combine.py
tests/: README.md  md_test.py
useful_scripts/: main.py
useful_scripts/markdown/: main.py  obsidian_config_zipper.py  readme_handler.py
useful_scripts/paths/: paths.py  translater.py
