[tool.poetry]
name = "useful-scripts"
version = "0.1.0"
description = ""
authors = ["Atticuszz <1831768457@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^306"
python-docx = "^1.1.0"

[tool.poetry.scripts]
translater = "useful_scripts.paths.translater:main"
convert-links = "useful_scripts.markdown.convert_links:main"
readme-handler = "useful_scripts.markdown.readme_handler:main"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
